--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,11 +24,19 @@
     <%= form.email_field :email%>
   </div>
   <div>
+    <%= form.label "Password"%>
+    <%= form.password_field :password%>
+  </div>
+  <div>
+    <%= form.label "Confirm Password"%>
+    <%= form.password_field :password_confirmation%>
+  </div>
+  <div>
     <%= form.label "Bio"%>
     <%= form.text_field :bio%>
   </div>
   <div>
-    <%= form.label "Bio"%>
+    <%= form.label "Profile Photo"%>
     <%= form.file_field :profile_image%>
   </div>
 
