Adds links to new form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,7 +39,18 @@
     <%= form.label "Profile Photo"%>
     <%= form.file_field :profile_image%>
   </div>
-
+  <div>
+    <%= form.label "instagram"%>
+    <%= form.text_field :instagram_url%>
+  </div>
+  <div>
+    <%= form.label "tiktok"%>
+    <%= form.text_field :tiktok_url%>
+  </div>
+  <div>
+    <%= form.label "snapchat"%>
+    <%= form.text_field :snapchat_url%>
+  </div>
   <div>
     <%= form.submit %>
   </div>
