--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,2 +1,21 @@
 <div id="<%= dom_id user %>">
 </div>
+
+<div>
+  <%= user.profile_image%>
+</div>
+<div>
+  <%= user.full_name%>
+</div>
+<div>
+  <%= user.bio%>
+</div>
+<div>
+  <%= user.instagram_url%>
+</div>
+<div>
+  <%= user.tiktok_url%>
+</div>
+<div>
+  <%= user.snapchat_url%>
+</div>
