Adds image upload capability to user create and update forms

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,9 +35,9 @@
     <%= form.label "Bio"%>
     <%= form.text_field :bio%>
   </div>
-  <div>
-    <%= form.label "Profile Photo"%>
-    <%= form.file_field :profile_image%>
+  <div class="field">
+    <%= form.label :image%>
+    <%= form.file_field :image%>
   </div>
   <div>
     <%= form.label "instagram"%>
