Includes ImageUploader in OriginalPost model, includes file_field in original_post _form partial, includes image_tage in _original_post partial

--- a/app/views/original_posts/_form.html.erb
+++ b/app/views/original_posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :image, style: "display: block" %>
-    <%= form.text_area :image %>
+    <%= form.file_field :image %>
   </div>
 
   <div>
