Calls image_for() method in _original_post partial

--- a/app/views/original_posts/_original_post.html.erb
+++ b/app/views/original_posts/_original_post.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong>Image:</strong>
-    <%= image_tag @original_post.image_url if @original_post.image %>
+    <%= image_for(user, 300, 300) %>
   </p>
 
   <p>
