--- a/app/views/original_posts/_original_post.html.erb
+++ b/app/views/original_posts/_original_post.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong>Image:</strong>
-    <%= image_for(user, 300, 300) %>
+    <%= post_image_for(original_post, 300, 300) %>
   </p>
 
   <p>
