Adds follow button for relationships create action in user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,5 @@
   <%= destroy_user(@user) %>
 
   <%# TODO: Fix Error with 'method: post' coming from server.%>
-  <%= button_to "Follow this User", {controller: "relationships", action: "create", leader_id: @user.id, method: post} %>
+  <%= button_to "Follow", {controller: "relationships", action: "create", leader_id: @user.id, method: :post} %>
 </div>
