--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,8 @@
 
   <%= destroy_user(@user) %>
 </div>
-  <%# TODO: Fix Error with 'method: post' coming from server.%>
-  <%= button_to "Follow", {controller: "relationships", action: "create", leader_id: @user.id, method: :post} %>|
+<div>
+  <%= button_to "Follow", {controller: "relationships", action: "create", leader_id: @user.id, method: :post} %>
   <%= button_to "Unfollow", {controller: "relationships", action: "destroy", leader_id: @user.id, method: :delete}%>
+  </div>
 
