Corrects syntax on button_to action to delete relationships

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
   <%= destroy_user(@user) %>
 </div>
 <div>
-  <%= button_to "Follow", {controller: "relationships", action: "create", leader_id: @user.id, method: :post} %>
-  <%= button_to "Unfollow", {controller: "relationships", action: "destroy", leader_id: @user.id, method: :delete}%>
+  <%= button_to "Follow", {controller: "relationships", action: "create", leader_id: @user.id}, method: :post %>
+  <%= button_to "Unfollow", {controller: "relationships", action: "destroy", leader_id: @user.id}, method: :delete%>
   </div>
 
