--- a/app/views/shared_posts/_form.html.erb
+++ b/app/views/shared_posts/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: shared_post) do |form| %>
-  <% if shared_post.errors.any? %>
+<%= form_with(model: @shared_post, url: shared_posts_path, method: :post) do |form| %>
+  <% if @shared_post.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(user.errors.count, "error") %> Post not shared. Please try again.</h2>
+      <h2><%= pluralize(user.errors.count, "error") %> prohibited this shared_post from being shared:</h2>
 
       <ul>
-        <% shared_post.errors.each do |error| %>
+        <% @shared_post.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
