Adds links to navigate between all shared posts and one shared post

--- a/app/views/shared_posts/_shared_post.html.erb
+++ b/app/views/shared_posts/_shared_post.html.erb
@@ -1,12 +1,12 @@
 <div>
-  <%= @shared_post.title%>
+  <%= shared_post.title%>
 </div>
 
 <%# TODO Add description to shared_post model to place here as an alt%>
 <div>
-  <%= image_tag(@shared_post.image_url, alt: "A shared post")%>
+  <%= image_tag(shared_post.image_url, alt: "A shared post")%>
 </div>
 
 <div>
-  <%= @shared_post.description%>
+  <%= shared_post.description%>
 </div>
