--- a/app/views/shared_posts/index.html.erb
+++ b/app/views/shared_posts/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Users</h1>
+<h1>Shared Posts</h1>
 
 <div>
   <% @shared_posts.each do |shared_post| %>
