--- a/app/views/shared_posts/show.html.erb
+++ b/app/views/shared_posts/show.html.erb
@@ -1,3 +1,3 @@
 <%= render @shared_post%>
 
-<%= link_to "See all shared posts" shared_posts_path%>
+<%= link_to "See all shared posts", shared_posts_path%>
