Differentiates helper methods for image rendering between shared posts and original posts

--- a/app/views/shared_posts/_shared_post.html.erb
+++ b/app/views/shared_posts/_shared_post.html.erb
@@ -9,7 +9,7 @@
 
 <p>
     <strong>Image:</strong>
-      <%= post_image_for(shared_post, 600, 400) %>
+      <%= shared_post_image_for(shared_post, 600, 400) %>
 </p>
 
 <div>
