--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,16 +31,8 @@
           <li class="nav-item">
             <a class="nav-link" href="/shared_posts">Shared Posts</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Posts
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">All Posts</a>
-              <a class="dropdown-item" href="<%= original_posts_path %>">Original Posts</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Shared Posts</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="/all_posts">All Posts</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
