--- a/app/views/all_posts/index.html.erb
+++ b/app/views/all_posts/index.html.erb
@@ -1,2 +1,7 @@
-
-<%= render @all_posts%>
+<div class = "row">
+    <% @all_posts.each do |post|%>
+      <div class = "col">
+        <%= render post%>
+      </div>
+    <%end%>
+</div>
