--- a/app/views/shared_posts/_shared_post.html.erb
+++ b/app/views/shared_posts/_shared_post.html.erb
@@ -4,6 +4,6 @@
   <div class="card-body">
     <h5 class="card-title"><%= shared_post.title%></h5>
     <p class="card-text"><%= shared_post.description %></p>
-    <%= link_to "See this post", original_post, class: "btn btn-primary" %>
+    <%= link_to "See this post", shared_post, class: "btn btn-primary" %>
   </div>
 </div>
