--- a/app/views/all_posts/index.html.erb
+++ b/app/views/all_posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class = "row">
     <% @all_posts.each do |post|%>
-      <div class = "col">
+      <div class = "col shadow p-3 mb-5 bg-body rounded">
         <%= render post%>
       </div>
     <%end%>
