--- a/app/views/shared_posts/_shared_post.html.erb
+++ b/app/views/shared_posts/_shared_post.html.erb
@@ -1,7 +1,12 @@
 <div class="card" style="width: 18rem;" id="<%= dom_id shared_post %>">
 
-  <img src="<%= shared_post.image_url%>" class="card-img-top" alt="<%= shared_post.description%>">
-  <div class="card-body">
+
+   <% if !shared_post.image_url%>
+    <img src="<%=image_url("no-image.jpg")%>" class="card-img-top" alt="<%= shared_post.description%>">
+  <%else%>
+    <img src="<%= shared_post.image_url%>" class="card-img-top" alt="<%= shared_post.description%>">
+  <%end%>
+  <div class="card-body ">
     <h5 class="card-title"><%= shared_post.title%></h5>
     <p class="card-text"><%= shared_post.description %></p>
     <%= link_to "See this post", shared_post, class: "btn btn-primary" %>
